# cppxcp

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  build_local.sh  readme.md
cmake/: clang_format.cmake  clang_tidy.cmake  cmake_format.cmake  colorized_messages.cmake  enabled_projects.cmake  polyspace_tools.cmake  unittests.cmake
projects/common/include/: common_types.hpp  sfinae.hpp  span.hpp  utilities.hpp
projects/common/src/: gtest_main.cpp
projects/udp/: CMakeLists.txt
projects/udp/include/: udp_server.hpp  udp_server_types.hpp  udp_socket.hpp  udp_socket_types.hpp
projects/udp/lib/: udp_socket.cpp  udp_socket_types.cpp
projects/udp/tests/: test_udp_server.cpp  test_udp_socket.cpp
projects/xcp/: CMakeLists.txt
projects/xcp/lib/protocol_layer/: xcp_types.hpp
projects/xcp/lib/transport_layer/ethernet/: xcp_transport_server.cpp  xcp_transport_server.hpp  xcp_transport_types.cpp  xcp_transport_types.hpp
projects/xcp/tests/: test_xcp_transport_layer.cpp
tools/: install_vscode_extensions.sh
xcp_example_app/: CMakeLists.txt
xcp_example_app/src/: business_logic.cpp  business_logic.hpp  example_app.cpp  xcp_example_app.cpp  xcp_example_app.hpp  xcp_slave_core_int.cpp
xcp_slave/: CMakeLists.txt
xcp_slave/cmake/: xcp_integration.cmake
xcp_slave/include/: xcp.h
xcp_slave/lib/: xcp.c  xcp_config.h  xcp_globals.c  xcp_globals.h  xcp_slave_cal_page_file_io.c  xcp_slave_cal_page_file_io.h  xcp_slave_core.c  xcp_slave_core.h  xcp_slave_core_calibration.c  xcp_slave_core_calibration.h  xcp_slave_core_common.c  xcp_slave_core_common.h  xcp_slave_log.c  xcp_slave_log.h
xcp_slave/tools/a2l_templates/: hpa.a2l  vhpa.a2l
xcp_slave/tools/a2l_templates/calibration/: hpa.a2l  vhpa.a2l
xcp_slave/tools/linker_scripts/: sections.ld
xcp_slave/tools/vcc_a2l_tools/: VccA2lAddressUpdate  VccA2lCreator  VccA2lMerge  readme.md
